@startuml Renderers
title Renderers

skinparam classAttributeIconSize 0

package Model{
    abstract class ItemVisitor{}
}

        class DoorViewFactory{
            + createDoorView(door: Door): DoorPanel
        }

        class EffectViewFactory {
            +createPanel(defenseStrategy: DefenseStrategy): EffectPanel
            +createPanel(gasEffect: GasEffect): EffectPanel
            +createPanel(wetEffect: WetEffect): EffectPanel
            +createPanel(stickyEffect: StickyEffect): EffectPanel
            +createPanel(stunnedStep: StunnedStep): EffectPanel
        }

        ItemHolderViewFactory *--"1" RoomPanel: autoPlaceTo
        class ItemHolderViewFactory {
            -studentViews: HashMap<Student, PlayerPanel>
            -roomViews: HashMap<Room, RoomPanel>
            +setAutoPlacement(target: RoomPanel): void
            +createMenuPanel(student: Student): PlayerPanel
            +createPanel(student: Student): ActorPanel
            +createPanel(janitor: Janitor): ActorPanel
            +createPanel(professor: Professor): ActorPanel
            +createPanel(room: Room): RoomPanel
        }

        ItemVisitor <|-- ItemViewFactory
        ItemViewFactory *--"1" ItemPanel: panel
        class ItemViewFactory {
            +createPanel(item: Item): ItemPanel<? extends Item>
            +visit(airFreshener: AirFreshener): void
            +visit(beer: Beer): void
            +visit(cocktail: Cocktail): void
            +visit(camembert: Camembert): void
            +visit(fakeItem: FakeItem): void
            +visit(gasMask: GasMask): void
            +visit(slideRule: SlideRule): void
            +visit(sponge: Sponge): void
            +visit(transistor: Transistor): void
            +visit(tvsz: Tvsz): void
        }

@enduml